# proyecto_sopes2_2S25

./: .gitignore  README.md
backend/: CMakeLists.txt  api_docu.md
backend/include/: syscalls.h  types.h
backend/include/auth/: pam_auth.h
backend/include/handlers/: auth_handler.h  http_handler.h  websocket_handler.h
backend/include/syscalls/: keyboard_caption.h  mouse_action.h  mouse_tracking.h  resources_pc.h  screen_live.h
backend/include/utils/: base64.h
backend/src/: main.cpp
backend/src/auth/: pam_auth.cpp
backend/src/handlers/: auth_handler.cpp  http_handler.cpp  websocket_handler.cpp
backend/src/syscalls/: keyboard_caption.cpp  mouse_action.cpp  mouse_tracking.cpp  resources_pc.cpp  screen_live.cpp
backend/src/utils/: base64.cpp
documentacion/: documentacion.md  errores.md
frontend/: documentacion.md
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Header.jsx  RemoteDesktop.jsx  SystemStats.jsx
frontend/src/contexts/: AutoContext.jsx
frontend/src/hooks/: useAuth.js  useWebSocket.js
frontend/src/pages/: LoginPage.jsx  MainPage.jsx  RegisterPage.jsx
frontend/src/services/: apiService.js  websocketService.js
linux-6.12.41/: Makefile
linux-6.12.41/arch/x86/entry/syscalls/: syscall_64.tbl
linux-6.12.41/kernel/: Makefile  keyboard_caption.c  mouse_action.c  mouse_tracking.c  resources_pc.c  screen_live.c
pruebas/keyboard/: test_key  test_key.c
pruebas/mouse/: action_mouse  action_mouse.c  move_mouse  move_mouse.c  prueba_p1  prueba_p1.c
pruebas/pc_recursos/: test_recursos  test_recursos.c
pruebas/pruebas_mouse_move/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .vmouse.ko.cmd  .vmouse.mod.cmd  .vmouse.o.cmd  vmouse.ko  vmouse.mod  vmouse.mod.c
pruebas/screen/: doc_driver.md  screenshot.raw  test_screen  test_screen.c
pruebas_mouse_move/: .modules.order.cmd  .vmouse.mod.o.cmd  Makefile  vmouse.c  vmouse.ko
